@@ -1,0 +1,10 @@
+
+#pragma once
+
+/*
+ * Our subset of string.h
+ */
+
+#include <stddef.h>
+
+void *memset(void * __restrict s, int c, size_t n);
