@@ -21,13 +21,15 @@ vprintf (const char *format, __attribute__((unused)) va_list ap)
             {
             case '%':
               if (__builtin_expect(putchar('%') == EOF, 0))
-                return EOF;
+                return chars_written;
+              ++chars_written;
               break;
             case 'c':
               {
                 int x = va_arg(ap, int);
                 if (__builtin_expect(putchar(x) == EOF, 0))
-                  return EOF;
+                  return chars_written;
+                ++chars_written;
               }
               break;
             case 's':
@@ -37,32 +39,55 @@ vprintf (const char *format, __attribute__((unused)) va_list ap)
                   {
                     int res = printf("(null)");
                     if (__builtin_expect(res == EOF, 0))
-                      return EOF;
-                    chars_written += res - 1;
+                      return chars_written;
+                    chars_written += res;
                   }
                 else
                   {
                     while (*x)
                       {
                         if (__builtin_expect(putchar(*x) == EOF, 0))
-                          return EOF;
+                          return chars_written;
                         ++x;
                         ++chars_written;
                       }
                   }
-                --chars_written;
+              }
+              break;
+            case 'i':
+              {
+                int x = va_arg(ap, int);
+                char tmp[10] = { 0 };
+                int i = 0;
+                while (x)
+                  {
+                    tmp[i] = x % 10;
+                    x /= 10;
+                    ++i;
+                  }
+                for ( ; i >= 0; --i)
+                  {
+                    if (tmp[i] != 0 || i == 0)
+                      if (__builtin_expect(putchar(tmp[i] + '0') == EOF, 0))
+                        return chars_written;
+                    ++chars_written;
+                  }
               }
               break;
             default:
               printf("\nprintf: unimplemented conversion character '%c'\n", *c);
-              return -1;
+              return chars_written;
               break;
             }
+          ++c;
         }
-      if (__builtin_expect(putchar(*c) == EOF, 0))
-        return EOF;
-      ++chars_written;
-      ++c;
+      else
+        {
+          if (__builtin_expect(putchar(*c) == EOF, 0))
+            return chars_written;
+          ++chars_written;
+          ++c;
+        }
     }
   
   return chars_written;
