@@ -17,8 +17,6 @@ ev3ninja_main (__unused int argc, __unused char *argv[])
   for (i = 0; i <= argc; ++i)
     printf("argv[%i] = \"%s\"\n", i, argv[i]);
 
-  printf("All done. exiting :)\n");
-  
   puts("All done. ev3ninja out!");
 
   return 0;
